force-app/main/default/objects/CRMC_PP__GridView__c/fields/CRMC_PP__Category__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>View Category</label>
    <referenceTo>CRMC_PP__View_Category__c</referenceTo>
    <relationshipLabel>ActionGrid Views</relationshipLabel>
    <relationshipName>ActionGrid_Views</relationshipName>
    <type>Lookup</type>
</CustomField>