force-app/main/default/objects/CRMC_PP__GridView__c/fields/CRMC_PP__Context__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Context__c</fullName>
    <description>Context the view was saved from, Page Layout as a related list, ActionGrid Explorer, or Custom VF page.</description>
    <inlineHelpText>Context the view was saved from, Page Layout as a related list, ActionGrid Explorer, or Custom VF page.</inlineHelpText>
    <label>Context</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visualforce Page</fullName>
                <default>true</default>
                <label>Visualforce Page</label>
            </value>
            <value>
                <fullName>Explorer</fullName>
            </value>
            <value>
                <fullName>Page Layout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>