force-app/main/default/objects/CRMC_PP__GridView__c/fields/CRMC_PP__Description__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Description__c</fullName>
    <description>Description of the ActionGrid View</description>
    <inlineHelpText>Description of the ActionGrid View</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>